--- a/xe.grApp/MainView/CreationAdViewController.xib
+++ b/xe.grApp/MainView/CreationAdViewController.xib
@@ -39,21 +39,21 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nuD-rs-6a2">
-                    <rect key="frame" x="0.0" y="208.66666666666663" width="393" height="189.33333333333337"/>
+                    <rect key="frame" x="0.0" y="208.66666666666669" width="393" height="188.66666666666669"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EJb-GO-Dbf">
-                            <rect key="frame" x="18" y="8" width="357" height="21"/>
+                            <rect key="frame" x="18" y="7.9999999999999982" width="357" height="20.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8lQ-co-Lu4">
-                            <rect key="frame" x="18" y="38" width="357" height="41.333333333333343"/>
+                            <rect key="frame" x="18" y="37.333333333333343" width="357" height="41.333333333333343"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZWo-RL-dIR">
-                            <rect key="frame" x="0.0" y="87.333333333333343" width="393" height="100"/>
+                            <rect key="frame" x="0.0" y="86.666666666666657" width="393" height="100"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="XaI-Hr-r0p"/>
@@ -73,7 +73,7 @@
                         <constraint firstAttribute="trailing" secondItem="EJb-GO-Dbf" secondAttribute="trailing" constant="18" id="B17-mE-M2z"/>
                         <constraint firstAttribute="trailing" secondItem="8lQ-co-Lu4" secondAttribute="trailing" constant="18" id="CpY-0G-2a2"/>
                         <constraint firstItem="ZWo-RL-dIR" firstAttribute="leading" secondItem="nuD-rs-6a2" secondAttribute="leading" id="Mwf-TM-6fU"/>
-                        <constraint firstItem="ZWo-RL-dIR" firstAttribute="top" secondItem="8lQ-co-Lu4" secondAttribute="bottom" constant="8" symbolic="YES" id="NEe-7v-k7f"/>
+                        <constraint firstItem="ZWo-RL-dIR" firstAttribute="top" secondItem="8lQ-co-Lu4" secondAttribute="bottom" constant="8" id="NEe-7v-k7f"/>
                         <constraint firstItem="EJb-GO-Dbf" firstAttribute="leading" secondItem="nuD-rs-6a2" secondAttribute="leading" constant="18" id="ewA-Ga-c8b"/>
                         <constraint firstAttribute="bottom" secondItem="ZWo-RL-dIR" secondAttribute="bottom" constant="2" id="rGR-ss-g3I"/>
                         <constraint firstItem="8lQ-co-Lu4" firstAttribute="top" secondItem="EJb-GO-Dbf" secondAttribute="bottom" constant="9" id="vTd-Cj-aFb"/>
@@ -81,25 +81,25 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5tl-wI-Gcg">
-                    <rect key="frame" x="18" y="403" width="357" height="21"/>
+                    <rect key="frame" x="18" y="402.33333333333331" width="357" height="28.666666666666686"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2en-Oa-ocN">
-                    <rect key="frame" x="18" y="432" width="357" height="41.666666666666686"/>
+                    <rect key="frame" x="18" y="439" width="357" height="41.666666666666686"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqr-rd-P3Z">
-                    <rect key="frame" x="18" y="494.66666666666669" width="357" height="21.000000000000057"/>
+                    <rect key="frame" x="18" y="501.66666666666669" width="357" height="28.666666666666686"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Type here.." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="GZh-mf-q4e">
-                    <rect key="frame" x="18" y="523.66666666666663" width="357" height="120.33333333333337"/>
+                    <rect key="frame" x="18" y="538.33333333333337" width="357" height="120.33333333333337"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <color key="textColor" systemColor="labelColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -133,10 +133,10 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="E5D-GU-6Sd" secondAttribute="bottom" id="2bi-12-qW2"/>
                 <constraint firstItem="gqr-rd-P3Z" firstAttribute="top" secondItem="2en-Oa-ocN" secondAttribute="bottom" constant="21" id="53n-QN-fvZ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5tl-wI-Gcg" secondAttribute="trailing" constant="18" id="6hA-8M-kOr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2en-Oa-ocN" secondAttribute="trailing" constant="18" id="9Em-vS-CTP"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="GZh-mf-q4e" secondAttribute="bottom" constant="259.33333333333337" id="AYk-Af-Mhl"/>
                 <constraint firstItem="AJC-Ip-0aD" firstAttribute="leading" secondItem="E5D-GU-6Sd" secondAttribute="trailing" constant="30" id="CXa-Nt-8XP"/>
                 <constraint firstItem="nuD-rs-6a2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DSE-8m-ahr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="AJC-Ip-0aD" secondAttribute="bottom" id="Gkj-2l-3n1"/>
@@ -145,27 +145,30 @@
                 <constraint firstItem="PYO-3F-Jhs" firstAttribute="top" secondItem="uCT-9Y-r3G" secondAttribute="bottom" constant="25.333333333333329" id="NES-xE-o1N"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gqr-rd-P3Z" secondAttribute="trailing" constant="18" id="NGJ-Aa-6Um"/>
                 <constraint firstItem="GZh-mf-q4e" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.158643" id="NOW-jE-GWi"/>
-                <constraint firstItem="GZh-mf-q4e" firstAttribute="top" secondItem="gqr-rd-P3Z" secondAttribute="bottom" constant="8" symbolic="YES" id="ReB-r1-wSP"/>
+                <constraint firstItem="EJb-GO-Dbf" firstAttribute="height" relation="lessThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.027668" id="QjM-TC-nLS"/>
+                <constraint firstItem="GZh-mf-q4e" firstAttribute="top" secondItem="gqr-rd-P3Z" secondAttribute="bottom" constant="8" id="ReB-r1-wSP"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="uCT-9Y-r3G" secondAttribute="trailing" constant="18" id="Rko-st-eAi"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="PYO-3F-Jhs" secondAttribute="trailing" constant="18" id="Rps-GQ-13e"/>
-                <constraint firstItem="2en-Oa-ocN" firstAttribute="top" secondItem="5tl-wI-Gcg" secondAttribute="bottom" constant="8" symbolic="YES" id="SOI-KU-2Lj"/>
+                <constraint firstItem="2en-Oa-ocN" firstAttribute="top" secondItem="5tl-wI-Gcg" secondAttribute="bottom" constant="8" id="SOI-KU-2Lj"/>
                 <constraint firstItem="gqr-rd-P3Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="ZLs-Fx-zZi"/>
                 <constraint firstItem="TZt-TX-Wis" firstAttribute="top" secondItem="PYO-3F-Jhs" secondAttribute="bottom" constant="8" symbolic="YES" id="ahn-fw-zIW"/>
                 <constraint firstItem="5tl-wI-Gcg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="b9J-BR-Kau"/>
                 <constraint firstItem="5tl-wI-Gcg" firstAttribute="top" secondItem="nuD-rs-6a2" secondAttribute="bottom" constant="5" id="dv2-OL-aV5"/>
+                <constraint firstItem="PYO-3F-Jhs" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.027668" id="ePv-qP-hRm"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TZt-TX-Wis" secondAttribute="trailing" constant="18" id="f1Z-lT-9NG"/>
                 <constraint firstItem="uCT-9Y-r3G" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.037668" id="fFm-p0-HiD"/>
                 <constraint firstItem="uCT-9Y-r3G" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="hOW-Kr-Wg5"/>
                 <constraint firstItem="AJC-Ip-0aD" firstAttribute="top" secondItem="E5D-GU-6Sd" secondAttribute="top" id="i5e-dH-CBH"/>
-                <constraint firstItem="E5D-GU-6Sd" firstAttribute="top" relation="greaterThanOrEqual" secondItem="GZh-mf-q4e" secondAttribute="bottom" constant="10" id="iVC-2U-vQc"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="GZh-mf-q4e" secondAttribute="trailing" constant="18" id="jEV-54-wsw"/>
                 <constraint firstItem="8lQ-co-Lu4" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.0547958" id="jXW-ek-frJ"/>
                 <constraint firstItem="2en-Oa-ocN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="lfC-vT-HrW"/>
                 <constraint firstItem="PYO-3F-Jhs" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="lh0-jJ-nvq"/>
                 <constraint firstItem="uCT-9Y-r3G" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="17" id="nUa-V1-k08"/>
                 <constraint firstItem="TZt-TX-Wis" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="pex-88-rkl"/>
-                <constraint firstItem="nuD-rs-6a2" firstAttribute="top" secondItem="TZt-TX-Wis" secondAttribute="bottom" constant="8" symbolic="YES" id="tVL-zn-Os7"/>
+                <constraint firstItem="5tl-wI-Gcg" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.037668" id="qAL-Pr-fDs"/>
+                <constraint firstItem="nuD-rs-6a2" firstAttribute="top" secondItem="TZt-TX-Wis" secondAttribute="bottom" constant="8" id="tVL-zn-Os7"/>
                 <constraint firstItem="TZt-TX-Wis" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.0547958" id="u99-6P-5oM"/>
+                <constraint firstItem="gqr-rd-P3Z" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.037668" id="udM-Sh-n5w"/>
                 <constraint firstItem="2en-Oa-ocN" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.0547958" id="xqM-Si-UYX"/>
                 <constraint firstItem="E5D-GU-6Sd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="90" id="zP7-CU-KT7"/>
             </constraints>
